Changelog
=========

1.1a1 (unreleased)
------------------

- Added Spanish and Brazilian Portuguese translations
  [hvelarde]
- Move to using plone.app.registry
  [saibatizoku]


1.0a1 (2011-10-07)
------------------

- Initial release